--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "@testing-library/user-event": "^12.8.3",
     "framer-motion": "^4.1.17",
     "react": "^17.0.2",
+    "react-css-blur": "^1.1.1",
     "react-dom": "^17.0.2",
+    "react-native": "^0.65.1",
+    "react-native-blur": "^3.2.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
