--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "bootstrap": "^5.1.1",
     "framer-motion": "^4.1.17",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.0.0-rc.0",
     "react-css-blur": "^1.1.1",
     "react-dom": "^17.0.2",
     "react-native": "^0.65.1",
