--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "react-bootstrap": "^2.0.0-rc.0",
     "react-css-blur": "^1.1.1",
     "react-dom": "^17.0.2",
+    "react-frame-component": "^5.1.0",
     "react-native": "^0.65.1",
     "react-native-blur": "^3.2.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "test": "^0.1.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
