--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-blur": "^3.2.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-spring": "^9.2.4",
     "test": "^0.1.0",
     "web-vitals": "^1.1.2"
   },
