--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "antd-mobile": "^2.3.4",
     "bootstrap": "^5.1.1",
     "fabric": "^4.6.0",
     "framer-motion": "^4.1.17",
