--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "^4.0.3",
     "react-spring": "^9.2.4",
+    "styled-components": "^5.3.3",
     "test": "^0.1.0",
     "web-vitals": "^1.1.2",
     "webpack": "4.44.2"
