--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "test",
-  "version": "0.1.0",
+  "name": "OOS",
+  "version": "1.5.1",
   "private": true,
   "dependencies": {
     "@dnd-kit/core": "^3.1.1",
