--- a/package.json
+++ b/package.json
@@ -19,14 +19,17 @@
     "bootstrap": "^5.1.1",
     "framer-motion": "^4.1.17",
     "jquery": "^3.6.0",
+    "keen-slider": "^5.5.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-rc.0",
     "react-css-blur": "^1.1.1",
     "react-dom": "^17.0.2",
     "react-frame-component": "^5.1.0",
+    "react-native": "^0.66.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^4.0.3",
     "react-spring": "^9.2.4",
+    "react-time-picker": "^4.4.4",
     "react-use-measure": "1.0.0",
     "resize-observer-polyfill": "^1.5.1",
     "styled-components": "4.4.1",
@@ -59,6 +62,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-syntax-jsx": "^7.16.0",
     "@capacitor/cli": "^3.2.5",
     "prettier": "2.4.1"
   }
