--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jquery": "^3.6.0",
     "keen-slider": "^5.5.1",
     "react": "^17.0.2",
+    "react-beautiful-dnd": "^13.1.0",
     "react-bootstrap": "^2.0.0-rc.0",
     "react-css-blur": "^1.1.1",
     "react-dom": "^17.0.2",
