--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "antd": "^4.16.13",
+    "bezier-editor": "^1.0.1",
     "bootstrap": "^5.1.1",
     "framer-motion": "^4.1.17",
     "jquery": "^3.6.0",
