--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-bootstrap": "^2.0.0-rc.0",
     "react-css-blur": "^1.1.1",
     "react-dom": "^17.0.2",
+    "react-flip-page": "^1.6.4",
     "react-frame-component": "^5.1.0",
     "react-native": "^0.66.2",
     "react-router-dom": "^5.3.0",
