--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "^17.0.2",
     "react-flip-page": "^1.6.4",
     "react-frame-component": "^5.1.0",
+    "react-lottie-player": "^1.4.1",
     "react-native": "^0.66.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^4.0.3",
